added monkey and monkey animation

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Catch THe Monkey</title>
   </head>
   <body>
-    <div class="title"><h1>Catch the Monkey</h1></div>
-    <div>
-      <div class="messageArea">
-        Score: <span class="score">0</span> --- Time:
-        <span class="time">3:00</span>
-      </div>
-      <div class="playArea"></div>
+    >
+    <h1 class="" title>Catch the Monkey</h1>
+    <div class="messageArea">
+      Score: <span class="score">0</span> --- Time:
+      <span class="time">3:00</span>
     </div>
+    <div class="playArea"></div>
+
     <script src="game.js"></script>
   </body>
 </html>
