added css for playArea and a new ghost image

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       Score: <span class="score">0</span> --- Time:
       <span class="time">3:00</span>
     </div>
-    <div class="playArea"></div>
-
+    <br />
+    <div>
+      <div class="playArea"></div>
+    </div>
     <script src="game.js"></script>
   </body>
 </html>
