--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="" title>Catch the Monkey</h1>
     <div class="messageArea">
       Score: <span class="score">0</span> --- Time:
-      <span class="time">3:00</span>
+      <span class="timer"></span>
     </div>
     <br />
     <div>
