adding start button

--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="game.css" />
-    <title>Catch THe Monkey</title>
+    <title>Feed The Monkey</title>
   </head>
   <body>
-    >
-    <h1 class="" title>Catch the Monkey</h1>
+    <div>
+      <h1 class="title">
+        Feed the Monkey
+        <span><button class="start">Click to start</button></span>
+      </h1>
+    </div>
+    <br />
+    <div class="instruct">
+      <h2>
+        You have 3 minutes to feed the monkey as many bananas as you can. Click
+        to feed and score !
+      </h2>
+      <h3>Click to feed him and score a point</h3>
+    </div>
     <div class="messageArea">
-      Score: <span class="score">0</span> --- Time:
-      <span class="timer"></span>
+      Score: <span class="score">0</span> --- Time: <span class="timer"></span
+      ><span class="start"></span>
     </div>
     <br />
     <div>
