--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div>
       <h1 class="title">
         Feed the Monkey
-        <span><button class="start">Click to start</button></span>
+        <span> ! </span
+        ><span class="start"
+          ><button class="ctc" onclick="restart()">Click to start</button></span
+        >
       </h1>
     </div>
     <br />
