added restart and game over buttun functions

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <div>
       <h1 class="title">
         Feed the Monkey
-        <span> ! </span
+        <span> ! - </span
         ><span class="start"
-          ><button class="ctc" onclick="restart()">Click to start</button></span
+          ><button class="ctc" onclick="restart()">
+            Click here to start feeding me 🐵🍌
+          </button></span
         >
       </h1>
     </div>
