added prompt logic

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <br />
     <div class="instruct">
       <h2>
-        You have 3 minutes to feed the monkey as many bananas as you can. Click
+        You have (1) minute to feed the monkey as many bananas as you can. Click
         to feed and score !
       </h2>
       <h3>Click to feed him and score a point</h3>
     </div>
     <div class="messageArea">
-      Score: <span class="score">0</span> --- Time: <span class="timer"></span
+      🍌 Score: <span class="score">0</span> 🙊 Time: <span class="timer"></span
       ><span class="start"></span>
     </div>
     <br />
