added music and sound affects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Feed The Monkey</title>
   </head>
   <body>
+    <audio
+      id="bkmusic"
+      src="assets/circus.mp3"
+      loop="loop"
+      hidden="hidden"
+    ></audio>
+    <audio
+      id="gameOver"
+      src="assets/gameOver.wav"
+      hidden="hidden"
+      loop="false"
+    ></audio>
+    <audio
+      id="monkeyYum"
+      src="assets/monkeyYum.wav"
+      hidden="hidden"
+      loop="false""
+    ></audio>
     <div>
       <h1 class="title">
         Feed the Monkey
@@ -22,8 +40,8 @@
     <br />
     <div class="instruct">
       <h2>
-        You have (1) minute to feed the monkey as many bananas as you can. Click
-        to feed and score !
+        Feed the monkey as many bananas as you can until time expires. Click to
+        feed and score !
       </h2>
       <h3>Click to feed him and score a point</h3>
     </div>
