fixed buttons to start

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       loop="false""
     ></audio>
     <div>
+      <span class="start"><button class="ctc2"></button></span>
       <h1 class="title">
         Feed the Monkey
         <span> ! - </span
