--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       id="monkeyYum"
       src="assets/monkeyYum.wav"
       hidden="hidden"
-      loop="false""
+      loop="false"
     ></audio>
     <div>
       <span class="start"><button class="ctc2"></button></span>
       <h1 class="title">
-        Feed the Monkey
+        - Feed the Monkey
         <span> ! - </span
         ><span class="start"
           ><button class="ctc" onclick="restart()">
