--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     </div>
     <br />
     <div>
-      <div class="playArea"></div>
+      <div class="playArea">
+        <div class="startgame"></div>
+      </div>
     </div>
     <script src="game.js"></script>
   </body>
